# MRIMinimallyInvasiveTherapy

./: .gitignore  ByteSwapping.h  CMakeLists.txt  DicomImageReadReturnTag.cxx  DicomImageReadReturnTag.i  DicomReadImagRealWriteTemp.cxx  DicomReadWriteComplexImage.cxx  DicomSeriesConvert.cxx  DicomSeriesCopyHeader.cxx  MapCSI.m  README  README.avi  StmcbKernel.cu  cpd.py  dddas.py  debugtags.py  headerInfoSort.py  initialGuess.py  jobsetup.py  kalman.py  makefile  maketags  metadata.xlsx  mfgre.py  persistentrsync.py  regressionStmcb.m  thermalTherapy.py  utilities.py
Processed/: README  control_980Dog1.ini  control_980Dog2.ini  control_980Dog3.ini  control_980Dog4.ini
Review/: DicomCopyHeader.cxx  DicomImageReadReturnTag.cxx  DicomReadWriteComplexImage.cxx  DicomSeriesConvert.cxx  LBIE_2_hp3d.py  README  RigidRegistration.cxx  SubsampleNoFilter.cxx  createboxmesh.py  createtags  dddas.py  headerInfoSort.py  jobsetup.py  makefile  registration.py  simulatemrti.py  thermalTherapy.py  utilities.py
T1relaxation/: FlipAngleMinVar.m  GenerateIndex.m  Main.m  Refs.bib  T1cvr.eps  T1cvr.fig  T1refcvr.eps  T1refcvr.fig  T1relaxation.aux  T1relaxation.bbl  T1relaxation.blg  T1relaxation.tex  T1vsTemp.eps  T1vsTemp.fig  TempDose_time.eps  TempDose_time.fig  mcvr.eps  mcvr.fig  r1_dose.eps  r1_dose.fig  r2starT1_dose.eps  r2starT1_dose.fig  symbols.aux  symbols.tex
mouseProcessingScripts/: MGE2dcm_nii.m  mouseProcessing.m  processMGE.m  processMRTI.m  processT1w.m  processT2w.m  processTemp.m  writeReformat.m  writepDICOM_MGE.m
pydicom-0.9.8/: distribute_setup.py
pydicom-0.9.8/pydicom.egg-info/: PKG-INFO  SOURCES.txt
